# SuiWeb

./: README.md
frontend/: package-lock.json  package.json
frontend/src/components/: card.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/api/move/: index.ts
frontend/src/pages/api/sui/: index.ts
frontend/src/pages/deploy/: [hash].tsx  index.tsx
frontend/src/pages/moveai/: index.tsx
frontend/src/pages/publish/: [hash].tsx
frontend/src/styles/: globals.css
suiweb-cli/: Cargo.toml
suiweb-cli/src/: args.rs  main.rs
suiweb-cli/src/publish/: publish.rs
